--- a/WBNEWANSWEARS/WBNEWANSWEARS.csproj
+++ b/WBNEWANSWEARS/WBNEWANSWEARS.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.11.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
   </ItemGroup>
 
   <ItemGroup>
