--- a/WBNEWANSWEARS/WBNEWANSWEARS.csproj
+++ b/WBNEWANSWEARS/WBNEWANSWEARS.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+	  <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Resource\beautiful_flat-style_logo_desi.ico</ApplicationIcon>
+    <StartupObject>WBNEWANSWEARS.App</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,13 +21,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Remove="Dictionary1.xaml" />
+    <Content Include="Resource\beautiful_flat-style_logo_desi.ico" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.11.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.77" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
   </ItemGroup>
 
   <ItemGroup>
@@ -54,14 +56,6 @@
     <Resource Include="Fonts\Inter-SemiBold.ttf">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="MVVM\Model\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ConsoleApp1\ConsoleApp1.csproj" />
   </ItemGroup>
 
 </Project>
